Changed formatting, started sidebar

--- a/Kset.html
+++ b/Kset.html
@@ -6,24 +6,106 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="navbar-wrapper">
-            <div id="navbar" class="navbar"> 
-                <div class="container" onclick="burger(this)"> 
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div> 
-                </div>
-                <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="icon">
-                <button id="signup" class="button">
-                    <b class="text">SIGN IN</b>
-                </button> 
-                <button id="signin" class="button">
-                    <b class="text">LOG IN</b>
+        <!-- Left Column -->
+        <div id="left_column">
+            <div id="sidebar" class="sidebar">
+                <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="icon logo">
+                <button class="sidebarButton">
+                    <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="sidebarIcon">
+                    <b class = "text sidebarText">button 1</b>
+                </button>
+                <button class="sidebarButton">
+                    <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="sidebarIcon">
+                    <b class = "text sidebarText">button 2</b>
+                </button>
+                <button class="sidebarButton">
+                    <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="sidebarIcon">
+                    <b class = "text sidebarText">button 2</b>
                 </button>
             </div>
         </div>
-        <div id="main-menu"></div>
-        <div id="content" class="content"></div>
+        <!-- Right Column -->
+        <div id ="right_column">
+            <div class="navbar-wrapper">
+                <div id="navbar" class="navbar"> 
+                    <div class="container" onclick="burger(this)"> 
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div> 
+                    </div>
+                    <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="icon">
+                    <button id="signup" class="button">
+                        <b class="text">SIGN IN</b>
+                    </button> 
+                    <button id="signin" class="button">
+                        <b class="text">LOG IN</b>
+                    </button>
+                </div>
+            </div>
+            <div id="main-menu"></div>
+            <div id="content" class="content">
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+                <div class="track">
+                    <img src="https://m.media-amazon.com/images/I/51kWYlG4SSL._SL1400_.jpg" alt="track cover" class="cover">
+                    <p class="text">XEU V.A.L.D</p>
+                </div>
+            </div>
+        </div>
         <div id="controls"></div>
         <div id="footer" class="footer">
             <img id="miniCover" src="" class="miniCover">
@@ -36,6 +118,21 @@
 </html> 
 <script src="page.js"></script>
 <style >
+    #left_column{
+        width: 25vw;
+        margin-left: 0;
+    }
+    #right_column{
+        width: 75vw;
+        margin-left: 25%;
+    }
+    .logo{ /* Bottom Border needs to be fixed */
+        margin-top: 4%;
+        margin-bottom: 8%;
+        border-color: #f1f1f1;
+        border-width: 0px;
+        border-bottom-width: 2px;
+    }
     .miniCover{
         height: 50px;
         border: solid;
@@ -56,6 +153,45 @@
         border-top-width: 2px;
         border-color: #f1f1f190;
     }
+
+    .sidebar{
+        position:fixed;
+        box-sizing: border-box;
+        /* padding: 1%; */
+        height: 95vh;
+        width: 23%;
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 1%;
+        margin-bottom: 1%;
+        display: flex;
+        flex-flow: column;
+        border: #f1f1f1;
+        border-width: 10px;
+        border-style: double;
+        /* background-color: #f1f1f190; */
+    }
+
+    /* .sidebarIcon{
+        max-height: min(2vmax, 2.5vh);
+        aspect-ratio: "16/9";
+    } */
+
+    /* .sidebarButton{
+        margin-left: 1vw;
+        margin-right: 1vw;
+        margin-top: 1vw;
+        background-color:black;
+        border-color: #f1f1f1;
+        border-width: 0px;
+        border-radius: 5px;
+    } */
+    .sidebarButton:hover{
+        animation-name: underline;
+        animation-duration: 1000ms;
+        animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+
     audio {
         filter: invert(1);
         width: 60vw;
@@ -123,14 +259,40 @@
         margin-top: 1px;
         margin-bottom: 1px;
     }
+    /* General rules for all sizes */
+    .sidebarButton{
+        background-color:black;
+        border-color: #f1f1f1;
+        border-width: 0px;
+        border-bottom-width: 2px;
+        padding: 5%;
+    }
+
     @media screen and (max-width:960px) {
         .text{
             color: #f1f1f1;
             font-family: "myfont";
             font-size: large;
             max-height: 19px;
-        }   
+        }
+        /* .sidebarButton{
+            margin-left: 1vw;
+            margin-right: 1vw;
+            margin-top: 1vw;
+            background-color:black;
+            border-color: #f1f1f1;
+            border-width: 0px;
+            border-radius: 5px;
+        } */
+        .sidebarText{
+            display: none;
+        }
+        .sidebarIcon{
+            max-height: min(6vmax, 7.5vh);
+            aspect-ratio: "16/9";
+        }
     }
+
     .icon{
         margin-left: auto;
         margin-right: auto;
@@ -143,29 +305,87 @@
             width: 18%;
             padding: 1%;
         } 
+        /* .sidebarButton{
+            margin-left: 1vw;
+            margin-right: 1vw;
+            margin-top: 1vw;
+            background-color:black;
+            border-color: #f1f1f1;
+            border-width: 0px;
+            border-radius: 5px;
+        } */
+        .sidebarIcon{
+            max-height: min(2vmax, 2.5vh);
+            aspect-ratio: "16/9";
+        }
     }
     @media screen and (max-width:960px) and (min-width:769px) {
         .track{
             width: 23%;
             padding: 1%;
         } 
+        /* .sidebarButton{
+            margin-left: 1vw;
+            margin-right: 1vw;
+            margin-top: 1vw;
+            background-color:black;
+            border-color: #f1f1f1;
+            border-width: 0px;
+            border-radius: 5px;
+        } */
+        .sidebarIcon{
+            max-height: min(2vmax, 2.5vh);
+            aspect-ratio: "16/9";
+        }
     }
     @media screen and (max-width:768px) {
         .track{
             width: 31%;
             padding: 1.1%;
         } 
+        /* .sidebarButton{
+            margin-left: 1vw;
+            margin-right: 1vw;
+            margin-top: 1vw;
+            background-color:black;
+            border-color: #f1f1f1;
+            border-width: 0px;
+            border-radius: 5px;
+        } */
+        .sidebarText{
+            display: none;
+        }
+        .sidebarIcon{
+            max-height: min(4vmax, 5vh);
+            aspect-ratio: "16/9";
+        }
     }
     @media screen and (min-width:1201px) {
         .track{
             width: 15%;
             padding: 0.83%;
-        } 
+        }
+        /* .sidebarButton{
+            margin-left: 1vw;
+            margin-right: 1vw;
+            margin-top: 1vw;
+            background-color:black;
+            border-color: #f1f1f1;
+            border-width: 0px;
+            border-radius: 5px;
+            border-color: f1f1f190;
+            border-width: 2px;
+        } */
+        .sidebarIcon{
+            max-height: min(2vmax, 2.5vh);
+            aspect-ratio: "16/9";
+        }
     }
     
     .cover{
         width: 100%;
     }
+
     .button{
         margin-left: 1.5vw;
         background-color:black;
@@ -205,12 +425,12 @@
         border-color: #f1f1f190;
     }
     .navbar{
-        margin-left: 4vw;
+        /* margin-left: 4vw; */
         margin-right: 4vw;
         margin-top: 1vmax;
         display: flex;
         align-items: center;
-        width: 92vw;
+        /* width: 92vw; */
         height: 8vh;
         background: black;
     }
