Made bar look better

--- a/Kset.html
+++ b/Kset.html
@@ -108,6 +108,8 @@
     }
     .bottom{
         margin-bottom: 1vh;
+        display: flex;
+        flex-direction: column;
     }
     .logo{ /* Bottom Border needs to be fixed */
         margin-top: 2vh;
@@ -127,7 +129,7 @@
         border-radius: 12px;
         bottom: 0px;
         width: 100%;
-        max-width: 700px;
+        max-width: 755px;
         margin-left: auto;
         margin-right: auto;
         display: flex;
@@ -215,6 +217,9 @@
         font-size: 1rem;
         margin: 0%;
         margin-top: 2px;
+    }
+    .signup-banner{
+        margin-left: 1vw;
     }
     .icon {
         margin-left: auto;
