--- a/Kset.html
+++ b/Kset.html
@@ -57,9 +57,8 @@
                 <div class="bottom">
                     <audio id="audio" controls>
                         <source id="source" src="" type="audio/mpeg">
-                    </audio>
-
-                    <i class="signup-banner text">If you are new, consider <a href=#>signing up</a>.</i>
+                    </audio>   
+                    <b class="signup-banner text"><a class="signup-banner text accent-color" href=#>Signing up</a> for free</b>                 
                 </div>
             </div>
         </div>
@@ -107,7 +106,7 @@
         background-color: black;
     }
     .bottom{
-        margin-bottom: 1vh;
+        width: calc(100vw -66px);
         display: flex;
         flex-direction: column;
     }
@@ -117,7 +116,8 @@
         object-fit: contain;
     }
     .miniCover{
-        height: 50px;
+        height: 100%;
+        max-height: 62px;
         border: solid;
         border-width: 2px;
         border-color: #0E0C0B;
@@ -129,7 +129,7 @@
         border-radius: 12px;
         bottom: 0px;
         width: 100%;
-        max-width: 755px;
+        max-width: 800px;
         margin-left: auto;
         margin-right: auto;
         display: flex;
@@ -137,6 +137,7 @@
         border-width: 0px;
         border-top-width: 1px;
         border-color: #f1f1f190;
+        max-height: 64px;
     }
     .sidebar{
         width: 25vw;
@@ -219,7 +220,17 @@
         margin-top: 2px;
     }
     .signup-banner{
-        margin-left: 1vw;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 0.8rem;
+        text-overflow: ellipsis;
+        overflow: hidden; 
+        white-space: nowrap;
+        height: 1.8rem;
+
+    }
+    .accent-color{
+        color: #ee0000;
     }
     .icon {
         margin-left: auto;
@@ -343,8 +354,8 @@
     }
 
     .track{
-        width: 15%;
-        padding: 0.43%;
+        width: 12.6%;
+        padding: 0.44%;
         margin: 0.4%;
         box-shadow: 3px 3px 10px #000;
         border-radius: 8%;
@@ -392,14 +403,16 @@
     }
     @media screen and (max-width:1408px){
         .track{
-            width: 18%;
-            padding: 0.5%;
-            margin: 0.5%;
+            
+            width: 15%;
+            padding: 0.43%;
+            margin: 0.4%;
         }
     }
     @media screen and (max-width:1024px) {
         .track{
-            width: 23%;
+            
+            width: 18%;
             padding: 0.5%;
             margin: 0.5%;
         } 
@@ -441,8 +454,19 @@
         .menu-logo{
             display: block;
         }
+        .signup-banner{
+            margin-left: 2vw;
+
+        }
     }
     @media screen and (max-width:768px) {
+        .track{
+            width: 23%;
+            padding: 0.5%;
+            margin: 0.5%;
+        }
+    }
+    @media screen and (max-width:460px) {
         .track{
             width: 31%;
             padding: 0.6%;
