fixed hidden sidebar bug and nicer margins

--- a/Kset.html
+++ b/Kset.html
@@ -8,7 +8,7 @@
 <body>
     <div class="wrapper">
         <!-- Left Column -->
-        <div id="left-column" class="left-column">
+        <div id="left-column" class="left-column hidden">
             <div id="sidebar" class="sidebar">
                 <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="icon logo menu-logo">
                 <button class="sidebarButton">
