--- a/Kset.html
+++ b/Kset.html
@@ -44,6 +44,12 @@
                         <div class="bar2"></div>
                         <div class="bar3"></div> 
                     </div>
+                    <div class="search-bar">
+                        <form name="search" onsubmit="return searchMusicLibrary()" method="post">
+                            <input class="text" type="text" name="search">
+                        </form>
+                    </div>
+                    
                     
                     <button id="signup" class="button">
                         <b class="text">SIGN UP</b>
