--- a/Kset.html
+++ b/Kset.html
@@ -62,7 +62,9 @@
             <div id="main-menu"></div>
             <div class="spacer"></div>
             <div id="content" class="content">
+
             </div>
+            <div class="footerspacer"></div>
             <div id="footer" class="footer">
                 <img id="miniCover" src="" class="miniCover">
                 <div class="bottom">
