--- a/Kset.html
+++ b/Kset.html
@@ -79,21 +79,21 @@
     <div id="floating" class="floating">
         <div id="login" class="sign hide-floating">
             <img class="sign-img" src="assets/login.webp">
-            <input type="text" class="text sign-inputs fade" placeholder="username">
-            <input type="password" class="text sign-inputs fade" placeholder="password">
+            <input id="login-username" type="text" class="text sign-inputs fade" placeholder="username">
+            <input id="login-password" type="password" class="text sign-inputs fade" placeholder="password">
             <button id="button-login" class="text sign-button fade">
                 <b class="text">LOG IN</b>
             </button>
         </div>
         <div id="signup" class="sign hide-floating">
             <img class="sign-img" src="assets/login.webp">
-            <input type="text" class="text sign-inputs fade" placeholder="username">
-            <input type="password" class="text sign-inputs fade" placeholder="password">
+            <input id="signup-username" type="text" class="text sign-inputs fade" placeholder="username">
+            <input id="signup-password" type="password" class="text sign-inputs fade" placeholder="password">
             <input type="text" class="text sign-inputs fade" placeholder="name">
             <input type="text" class="text sign-inputs fade" placeholder="email">
             <input type="text" class="text sign-inputs fade" placeholder="date of birth xx/xx/xxxx">
             <a href="#" class="text">Terms of use</a>
-            <button id="button-singin" class="text sign-button fade">
+            <button id="button-signup" class="text sign-button fade">
                 <b class="text">SIGN UP</b>
             </button>
         </div>
