--- a/Kset.html
+++ b/Kset.html
@@ -11,16 +11,16 @@
         <div id="left-column" class="left-column hidden">
             <div id="sidebar" class="sidebar">
                 <img src="assets/icon.webp" alt="a cassette that is the logo of the app" class="icon logo menu-logo">
-                <button class="sidebarButton">
-                    <img src="assets/home.webp" alt="an icon of a house" id="home" class="sidebarIcon">
+                <button id="home" class="sidebarButton" onclick="switchContent('content')">
+                    <img src="assets/home.webp" alt="an icon of a house" class="sidebarIcon">
                     <b class = "text sidebarText">Home</b>
                 </button>
-                <button class="sidebarButton">
-                    <img src="assets/playlist.webp" alt="a playlist" id="playlist" class="sidebarIcon">
+                <button id="playlist" class="sidebarButton" onclick="switchContent('playlist-selection')">
+                    <img src="assets/playlist.webp" alt="a playlist" class="sidebarIcon">
                     <b class = "text sidebarText">PlayLists</b>
                 </button>
-                <button class="sidebarButton">
-                    <img src="assets/plus.webp" alt="a plus symbol" id="plus" class="sidebarIcon">
+                <button id="new-playlist" class="sidebarButton" onclick="switchContent('playlist-selection')">
+                    <img src="assets/plus.webp" alt="a plus symbol" class="sidebarIcon">
                     <b class = "text sidebarText">New Playlist</b>
                 </button>
                 <button onclick="window.open('https://github.com/UnlikelyBuddy1/Kset-uc3m-project')" type="button" class="sidebarButton">
@@ -61,9 +61,8 @@
             </div>
             <div id="main-menu"></div>
             <div class="spacer"></div>
-            <div id="content" class="content">
-
-            </div>
+            <div id="content" class="content"></div>
+            <div id="playlist-selection" class="playlist-selection"></div>
             <div class="footerspacer"></div>
             <div id="footer" class="footer">
                 <img id="miniCover" src="" class="miniCover">
@@ -95,6 +94,13 @@
             <a href="#" class="text">Terms of use</a>
             <button id="button-signup" class="text sign-button fade">
                 <b class="text">SIGN UP</b>
+            </button>
+        </div>
+        <div id="create-playlist" class="sign hide-floating">
+            <img class="sign-img" src="assets/plus.webp">
+            <input type="text" class="text sign-inputs fade" placeholder="Playlist Name">
+            <button id="button-playlist" class="text sign-button fade">
+                <b class="text">Create Playlist</b>
             </button>
         </div>
     </div>
