--- a/Kset.html
+++ b/Kset.html
@@ -62,7 +62,7 @@
             <div id="main-menu"></div>
             <div class="spacer"></div>
             <div id="content" class="content"></div>
-            <div id="playlist-selection" class="playlist-selection"></div>
+            <div id="playlist-selection" class="hide-floating playlist-selection"></div>
             <div class="footerspacer"></div>
             <div id="footer" class="footer">
                 <img id="miniCover" src="" class="miniCover">
