fixed, for good this time

--- a/Kset.html
+++ b/Kset.html
@@ -19,7 +19,7 @@
                     <img src="assets/playlist.webp" alt="a playlist" class="sidebarIcon">
                     <b class = "text sidebarText">PlayLists</b>
                 </button>
-                <button id="new-playlist" class="sidebarButton" onclick="switchContent('playlist-selection')">
+                <button id="new-playlist" class="sidebarButton">
                     <img src="assets/plus.webp" alt="a plus symbol" class="sidebarIcon">
                     <b class = "text sidebarText">New Playlist</b>
                 </button>
@@ -62,7 +62,7 @@
             <div id="main-menu"></div>
             <div class="spacer"></div>
             <div id="content" class="content"></div>
-            <div id="playlist-selection" class="hide-floating playlist-selection"></div>
+            <div id="playlist-selection" class="playlist-selection hide-floating"></div>
             <div class="footerspacer"></div>
             <div id="footer" class="footer">
                 <img id="miniCover" src="" class="miniCover">
