--- a/Kset.html
+++ b/Kset.html
@@ -87,7 +87,7 @@
         <div id="signup" class="sign hide-floating">
             <img class="sign-img" src="assets/login.webp">
             <input id="signup-username" type="text" class="text sign-inputs fade" placeholder="username">
-            <input id="signup-password" type="password" class="text sign-inputs fade" placeholder="password">
+            <input id="signup-password" type="password" class="text sign-inputs fade" placeholder="password 8 char 1 special">
             <input type="text" class="text sign-inputs fade" placeholder="name">
             <input type="text" class="text sign-inputs fade" placeholder="email">
             <input type="text" class="text sign-inputs fade" placeholder="date of birth xx/xx/xxxx">
