--- a/Kset.html
+++ b/Kset.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User Interfaces</title>
-    <link rel="stylesheet" href="Kset.css">
+    <link rel="stylesheet" href="assets/Kset.css">
 </head>
 <body>
     <div id="wrapper" class="wrapper">
@@ -70,7 +70,7 @@
                     <audio id="audio" controls>
                         <source id="source" src="" type="audio/mpeg">
                     </audio>   
-                    <b class="signup-banner text"><a class="signup-banner text accent-color" href=#>Signing up</a> for free</b>                 
+                    <b id="banner" class="signup-banner text"><a class="signup-banner text accent-color" href=#>Signing up</a> for free</b>                 
                 </div>
             </div> 
         </div>
@@ -106,4 +106,4 @@
     </div>
 </body>
 </html> 
-<script src="page.js"></script>
+<script src="assets/page.js"></script>
