Small search contributions

--- a/Kset.html
+++ b/Kset.html
@@ -44,7 +44,7 @@
                         <div class="bar2"></div>
                         <div class="bar3"></div> 
                     </div>
-                    <div class="search-bar">
+                    <div id="search-bar" class="search-bar">
                         <!-- <form role="search"> -->
                         <input class="text serach-input fade" type="text" id="mySearch" onkeyup="searchMusicLibrary()" placeholder="Search for a song...">
                         <!-- </form> -->
@@ -97,7 +97,7 @@
             </button>
         </div>
         <div id="create-playlist" class="sign hide-floating">
-            <img class="sign-img" src="assets/plus.webp">
+            <img class="sign-img plus-img" src="assets/plus.webp">
             <input type="text" class="text sign-inputs fade" placeholder="Playlist Name">
             <button id="button-playlist" class="text sign-button fade">
                 <b class="text">Create Playlist</b>
