--- a/Kset.html
+++ b/Kset.html
@@ -71,8 +71,8 @@
             <div class="spacer"></div>
             <div id="content" class="content"></div>
             <div id="playlist-selection" class="playlist-selection hide-floating"><b class="text">Playlists</b></div>
-            <div id="account" class="account hide-floating"><b class="text">Your Account Information</b></div>
-            <div id="profile" class="profile hide-floating"><b class="text">Your Profile</b></div>
+            <div id="account" class="account entireHeight hide-floating"><b class="text">Your Account Information</b></div>
+            <div id="profile" class="profile entireHeight hide-floating"><b class="text">Your Profile</b></div>
             <div id="logout" class="logout hide-floating"><b class="text">Logout Page</b></div>
             <div class="footerspacer"></div>
             <div id="footer" class="footer hide-floating">
