--- a/Kset.html
+++ b/Kset.html
@@ -102,7 +102,8 @@
             <input type="text" class="text sign-inputs fade" placeholder="name">
             <input type="text" class="text sign-inputs fade" placeholder="email">
             <input type="text" class="text sign-inputs fade" placeholder="date of birth xx/xx/xxxx">
-            <a href="#" class="text">Terms of use</a>
+            <div><input type="checkbox"><i class="text">I Accept the <a href="#">Terms of use</a></i></div>
+            
             <button id="button-signup" class="text sign-button fade">
                 <b class="text">SIGN UP</b>
             </button>
