added fb and google options

--- a/Kset.html
+++ b/Kset.html
@@ -103,10 +103,13 @@
             <input type="text" class="text sign-inputs fade" placeholder="email">
             <input type="text" class="text sign-inputs fade" placeholder="date of birth xx/xx/xxxx">
             <div><input type="checkbox"><i class="text">I Accept the <a href="#">Terms of use</a></i></div>
-            
             <button id="button-signup" class="text sign-button fade">
                 <b class="text">SIGN UP</b>
             </button>
+            <b class="text sign-up-ext">Or sign up with :</b>
+            <div><img src="assets/facebook.webp" class="signup-logo"/>
+                <img src="assets/google.webp" class="signup-logo"/></div>
+            
         </div>
         <div id="create-playlist" class="sign hide-floating">
             <input id="playlist-name" type="text" class="text sign-inputs fade" placeholder="Playlist Name">
