Added Graphics for liking songs, unfunctional

--- a/Kset.html
+++ b/Kset.html
@@ -101,6 +101,9 @@
             <button id="button-login" class="text sign-button fade">
                 <b class="text">LOG IN</b>
             </button>
+            <b class="text sign-up-ext">Or log in with :</b>
+            <div><img src="assets/facebook.webp" class="signup-logo"/>
+                <img src="assets/google.webp" class="signup-logo"/></div>
         </div>
         <div id="signup" class="sign hide-floating">
             <img class="sign-img" src="assets/login.webp">
