--- a/Kset.html
+++ b/Kset.html
@@ -75,7 +75,16 @@
                 <input class="text sign-inputs fade" type="text" id="playlist-search-bar-2" placeholder="Search to add songs...">
                 <div id="search-results-2" class="search-results"></div></div>
             <div id="account" class="account entireHeight hide-floating"><b class="text">Your Account Information</b></div>
-            <div id="profile" class="profile entireHeight hide-floating"><b class="text">Your Profile</b></div>
+            <div id="profile" class="profile entireHeight hide-floating"><b class="text">Your Profile</b><hr/>
+            <b class="text">Your Top Artist</b>
+            <div class="artist-wrapper">
+                <img src="assets/vald.webp" class="artist-profile"/>
+                <b class="text">Vald</b>
+                <div class="songs">
+                    <div class="playlist-song"><img src="assets/play.webp" class="playlist-item-play"><img class="playlist-item-cover" src="assets/XEU.webp"><b class="text">Désaccordé</b></div>
+                    <div class="playlist-song"><img src="assets/play.webp" class="playlist-item-play"><img class="playlist-item-cover" src="assets/V.webp"><b class="text">Anunnaki</b></div>
+                </div>
+            </div>
             <div id="logout" class="logout hide-floating"><b class="text">Logout Page</b></div>
             <div class="footerspacer"></div>
             <div id="footer" class="footer hide-floating">
